--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
       - data:/app/solaris/data/dynamic
 
     environment:
-      TOKEN: /run/secrets/token
-      DEFAULT_PREFIX: ">>"
-      HUB_GUILD_ID: 530249508177575952
-      HUB_COMMANDS_CHANNEL_ID: 657611609094619146
-      HUB_RELAY_CHANNEL_ID: 657612250768736271
-      HUB_STDOUT_CHANNEL_ID: 657562932413988873
+      TOKEN: file:/run/secrets/token
+      DEFAULT_PREFIX: str:>>
+      HUB_GUILD_ID: int:530249508177575952
+      HUB_COMMANDS_CHANNEL_ID: int:657611609094619146
+      HUB_RELAY_CHANNEL_ID: int:657612250768736271
+      HUB_STDOUT_CHANNEL_ID: int:657562932413988873
 
     secrets:
       - token
